// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookPreview matches the snapshot for a faulty image 1`] = `
<div
  className="fcqaLC"
  id="facebookPreview"
  mode={null}
>
  <div
    className="budNPo"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="jwoaow"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="bLnSsW"
    >
      <span
        className="fgfKyj"
      >
        yoast.com
      </span>
    </p>
    <span
      className="fAKGrh"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="hWOELD"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a faulty image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a landscape image 1`] = `
<div
  className="fcqaLC"
  id="facebookPreview"
  mode={null}
>
  <div
    className="budNPo"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="jwoaow"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="bLnSsW"
    >
      <span
        className="fgfKyj"
      >
        yoast.com
      </span>
    </p>
    <span
      className="fAKGrh"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="hWOELD"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a landscape image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a portrait image 1`] = `
<div
  className="fcqaLC"
  id="facebookPreview"
  mode={null}
>
  <div
    className="budNPo"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="jwoaow"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="bLnSsW"
    >
      <span
        className="fgfKyj"
      >
        yoast.com
      </span>
    </p>
    <span
      className="fAKGrh"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="hWOELD"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a portrait image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a square image 1`] = `
<div
  className="fcqaLC"
  id="facebookPreview"
  mode={null}
>
  <div
    className="budNPo"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="jwoaow"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="bLnSsW"
    >
      <span
        className="fgfKyj"
      >
        yoast.com
      </span>
    </p>
    <span
      className="fAKGrh"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="hWOELD"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a square image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a too small image 1`] = `
<div
  className="fcqaLC"
  id="facebookPreview"
  mode={null}
>
  <div
    className="budNPo"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="jwoaow"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="bLnSsW"
    >
      <span
        className="fgfKyj"
      >
        yoast.com
      </span>
    </p>
    <span
      className="fAKGrh"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="hWOELD"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with too small an image.
    </p>
  </div>
</div>
`;
